tests/fsharp/typecheck/sigs/neg95.bsl

neg95.fs(3,5,3,26): typecheck error FS3199: The 'rec' on this module is implied by an outer 'rec' declaration and is being ignored

neg95.fs(11,7,11,18): typecheck error FS3200: In a recursive declaration group, 'open' declarations must come first in each module

neg95.fs(19,7,19,22): typecheck error FS3201: In a recursive declaration group, module abbreviations must come after all 'open' declarations and before other declarations

neg95.fs(26,7,26,18): typecheck error FS3200: In a recursive declaration group, 'open' declarations must come first in each module

neg95.fs(32,7,32,18): typecheck error FS3200: In a recursive declaration group, 'open' declarations must come first in each module

neg95.fs(39,7,39,18): typecheck error FS3200: In a recursive declaration group, 'open' declarations must come first in each module

neg95.fs(45,10,45,22): typecheck error FS0954: This type definition involves an immediate cyclic reference through a struct field or inheritance relation

neg95.fs(52,10,52,21): typecheck error FS0954: This type definition involves an immediate cyclic reference through a struct field or inheritance relation

neg95.fs(61,10,61,22): typecheck error FS0954: This type definition involves an immediate cyclic reference through a struct field or inheritance relation
